// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListPublicSSO /> renders all element with France Connect 1`] = `
<Fragment>
  <ListGroup
    className=""
  >
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        id="toggle-franceConnect"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="capco.module.login_franceconnect"
              values={Object {}}
            />
          </h5>
        }
        onChange={[Function]}
      />
      <Relay(Connect(ReduxForm))
        onClose={[Function]}
        show={false}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        checked={false}
        id="toggle-facebook"
        label={
          <h5
            className="mb-0 mt-0"
          >
            Facebook
          </h5>
        }
        onChange={[Function]}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        checked={true}
        disabled={true}
        id="toggle-email"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="global.email"
              values={Object {}}
            />
          </h5>
        }
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
  </ListGroup>
</Fragment>
`;

exports[`<ListPublicSSO /> renders correctly without France Connect 1`] = `
<Fragment>
  <ListGroup
    className=""
  >
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        checked={false}
        id="toggle-franceConnect"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="capco.module.login_franceconnect"
              values={Object {}}
            />
          </h5>
        }
        onChange={[Function]}
      />
      <AppBox
        marginLeft="auto"
      >
        <FranceConnectTeaserModal />
      </AppBox>
      <Relay(Connect(ReduxForm))
        onClose={[Function]}
        show={false}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        checked={false}
        id="toggle-facebook"
        label={
          <h5
            className="mb-0 mt-0"
          >
            Facebook
          </h5>
        }
        onChange={[Function]}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
    <ListPublicSSO__ListGroupItemWithJustifyContentEnd>
      <Toggle
        checked={true}
        disabled={true}
        id="toggle-email"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="global.email"
              values={Object {}}
            />
          </h5>
        }
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentEnd>
  </ListGroup>
</Fragment>
`;
